[gd_scene load_steps=24 format=3 uid="uid://lknibfyx8b28"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_7shlp"]
[ext_resource type="Script" path="res://Player/WeaponHolder.gd" id="2_ia431"]
[ext_resource type="Script" path="res://Player/HUD.gd" id="2_yeypr"]
[ext_resource type="FontFile" uid="uid://dbff3baqt6tpn" path="res://Font/Suissnord.otf" id="4_5s74u"]
[ext_resource type="AudioStream" uid="uid://cf50c1u1yppv2" path="res://Sounds/- 01 Start - _walking_(2).mp3" id="4_55kog"]
[ext_resource type="Script" path="res://Player/Footsteps.gd" id="4_nustq"]
[ext_resource type="AudioStream" uid="uid://c4dj4hfnrievq" path="res://Sounds/- 01 Start - _walking_(3).mp3" id="5_dxudk"]
[ext_resource type="AudioStream" uid="uid://bclxupwx44qnp" path="res://Sounds/- 01 Start - _walking_(4).mp3" id="6_brmo0"]
[ext_resource type="AudioStream" uid="uid://cah4uwbpf67do" path="res://Sounds/- 01 Start - _walking_(5).mp3" id="7_nyjot"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_foafd"]

[sub_resource type="LabelSettings" id="LabelSettings_w8wr1"]
font = ExtResource("4_5s74u")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_lxjs8"]
font = ExtResource("4_5s74u")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_usdpo"]
font = ExtResource("4_5s74u")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_t876v"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_lsf2y"]
font_size = 24

[sub_resource type="Animation" id="Animation_p5k2f"]
resource_name = "ADS"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera/WeaponHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.184, -0.243, -0.276), Vector3(0, -0.15, -0.3)]
}

[sub_resource type="Animation" id="Animation_yyauy"]
resource_name = "Crouch"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCollision:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.2316, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerCamera:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.6, 0.328489), Vector3(0, 0.0603297, 0.328489)]
}

[sub_resource type="Animation" id="Animation_wad6o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera/WeaponHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.184, -0.243, -0.276)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCamera/WeaponHolder:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerCollision:shape:height")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerCamera:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.6, 0.328489)]
}

[sub_resource type="Animation" id="Animation_l7e65"]
resource_name = "Walk"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.6, 0.328489), Vector3(0, 0.499, 0.328), Vector3(0, 0.6, 0.328)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Footsteps")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"play_random_sound"],
"method": &"call"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5tve"]
_data = {
"ADS": SubResource("Animation_p5k2f"),
"Crouch": SubResource("Animation_yyauy"),
"RESET": SubResource("Animation_wad6o"),
"Walk": SubResource("Animation_l7e65")
}

[sub_resource type="Animation" id="Animation_e8kcg"]
resource_name = "ADS"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCamera/WeaponHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.184, -0.243, -0.276), Vector3(0, -0.15, -0.3)]
}

[sub_resource type="Animation" id="Animation_eu82j"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jfnnu"]
_data = {
"ADS": SubResource("Animation_e8kcg"),
"RESET": SubResource("Animation_eu82j")
}

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
collision_mask = 85
script = ExtResource("1_7shlp")

[node name="PlayerCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_foafd")

[node name="PlayerCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0.328489)
current = true

[node name="WeaponHolder" type="Node3D" parent="PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.184, -0.243, -0.276)
script = ExtResource("2_ia431")

[node name="Flashlight" type="SpotLight3D" parent="PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.452764, -0.192701, -0.678287)

[node name="InteractableFinder" type="RayCast3D" parent="PlayerCamera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.0300001, -0.67909)
target_position = Vector3(0, -2, 0)
collision_mask = 65
collide_with_areas = true

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_yeypr")

[node name="StatsContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 0
anchor_top = 26.875
anchor_bottom = 26.875
offset_left = 9.0
offset_top = -1044.0
offset_right = 223.0
offset_bottom = -924.0

[node name="Health" type="Label" parent="HUD/StatsContainer"]
layout_mode = 2
size_flags_vertical = 7
text = "Health"
label_settings = SubResource("LabelSettings_w8wr1")

[node name="Ammo" type="Label" parent="HUD/StatsContainer"]
layout_mode = 2
size_flags_vertical = 7
text = "Ammo"
label_settings = SubResource("LabelSettings_w8wr1")

[node name="BulletsLeft" type="Label" parent="HUD/StatsContainer"]
layout_mode = 2
size_flags_vertical = 7
text = "Bullets Left: "
label_settings = SubResource("LabelSettings_w8wr1")

[node name="UpgradeVarsContainer" type="VBoxContainer" parent="HUD"]
layout_mode = 0
anchor_top = 26.875
anchor_bottom = 26.875
offset_left = 1452.0
offset_top = -1059.0
offset_right = 1896.0
offset_bottom = -864.0

[node name="Speed" type="Label" parent="HUD/UpgradeVarsContainer"]
layout_mode = 2
size_flags_vertical = 7
text = "Speed:"
label_settings = SubResource("LabelSettings_w8wr1")

[node name="Level" type="Label" parent="HUD/UpgradeVarsContainer"]
layout_mode = 2
size_flags_vertical = 7
text = "Level:"
label_settings = SubResource("LabelSettings_w8wr1")

[node name="DistanceTraveled" type="Label" parent="HUD/UpgradeVarsContainer"]
layout_mode = 2
text = "Distance : "
label_settings = SubResource("LabelSettings_lxjs8")

[node name="UsePrompt" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 455.0
offset_top = 272.0
offset_right = 686.0
offset_bottom = 320.0
text = "Press E to pick up"
label_settings = SubResource("LabelSettings_usdpo")

[node name="WeaponContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 0
anchor_top = 26.825
anchor_bottom = 26.825
offset_left = 321.0
offset_top = -93.0
offset_right = 1582.0
offset_bottom = -9.0

[node name="PistolLabel" type="Label" parent="HUD/WeaponContainer"]
layout_mode = 2
text = "1: Pistol"
label_settings = SubResource("LabelSettings_t876v")

[node name="ShotgunLabel" type="Label" parent="HUD/WeaponContainer"]
layout_mode = 2
text = "2: Shotgun"
label_settings = SubResource("LabelSettings_lsf2y")

[node name="PlayerAnims" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l5tve")
}

[node name="Footsteps" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.724963, 0)
script = ExtResource("4_nustq")

[node name="Step1" type="AudioStreamPlayer3D" parent="Footsteps"]
stream = ExtResource("4_55kog")
bus = &"Room"

[node name="Step2" type="AudioStreamPlayer3D" parent="Footsteps"]
stream = ExtResource("5_dxudk")
bus = &"Room"

[node name="Step3" type="AudioStreamPlayer3D" parent="Footsteps"]
stream = ExtResource("6_brmo0")
bus = &"Room"

[node name="Step4" type="AudioStreamPlayer3D" parent="Footsteps"]
stream = ExtResource("7_nyjot")
bus = &"Room"

[node name="ADSAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jfnnu")
}

[connection signal="weapon_changed" from="PlayerCamera/WeaponHolder" to="HUD" method="_on_weapon_holder_weapon_changed"]
